# tmux-team

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.codex-integration  Dockerfile.sandbox  Makefile  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
docs/: acp-runtime.md  cli-reference.md  experimental-surfaces.md  extensibility-and-hooks.md  extensions.md  index.md  invariants.md  live-demo.md  managed-delivery.md  mcp-app-server-plan.md  permissions-roadmap.md  receiving-and-hooks.md  testing.md
kb/: 00_index.md  01_init.md  02_delivery_design.md  03_integration_options.md  04_hardening_checklist.md  05_installable_extension.md  06_hermes_comparison.md  07_principles.md  08_extensibility_and_hooks.md  09_omnigraph_memory_extension.md  10_scratchpad_memory.md  11_dogfooding_operability.md  11_durable_messaging_state.md  12_operator_supervision.md  13_acp_tui_control_socket.md  14_runtime_handoff.md  15_acp_config_options.md  16_acp_provider_matrix.md
scripts/: bootstrap_layout_smoke.py  codex_task_integration.py  fake_acp_agent.py  install_skill.py  live_demo_scenario.py  sandbox_demo.py
skills/start-tmux-team/: SKILL.md
skills/start-tmux-team/agents/: openai.yaml
skills/start-tmux-team/references/: acp-runtime.md  invariants.md  team-shapes.md
src/tmux_team/: __init__.py  acp_providers.py  acp_tui.py  app_server.py  bootstrap.py  cli.py  config.py  dashboard.py  display.py  lifecycle.py  logging_config.py  mcp_server.py  policy.py  runtime_contract.py  runtime_switch.py  service.py  store.py  watchdog_runner.py
src/tmux_team/extensions/: __init__.py  manifest.py  runner.py
templates/: team.toml
tests/: test_acp_lifecycle.py  test_acp_providers.py  test_acp_tui.py  test_app_server_delivery.py  test_cli.py  test_extensions.py  test_install_skill.py  test_live_demo_scenario.py  test_mcp_server.py  test_policy.py  test_runtime_switch.py  test_store.py
